# siostam

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Siostam.example.toml  SubsystemMapper.example.toml  SubsystemMapper.toml  setup.iss
src/: config.rs  core.rs  error.rs  git_extraction.rs  main.rs  server.rs  siostam.subsystems.toml  subsystem_mapper.subsystems.toml
src/git_extraction/: extraction.rs  git.rs  git_extraction.subsystems.toml  mod.rs
src/server/: actors.rs  mod.rs  websocket.rs
src/subsystem_mapping/: dot.rs  mod.rs  references.rs
src/subsystem_mapping/templates/: begin_cluster.hbs  begin_graph.hbs  edge.hbs  end_cluster.hbs  node.hbs
