[package]
name = "subsystems-mapper"
version = "0.1.0"
authors = ["Fanaen <contact@Fanaen.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.5"
log = "0.4.0"
env_logger = "0.7.1"
walkdir = "2"
